@@ -5,7 +5,13 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 03 Oct 2024 14:58:11 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:20:36 +0800</lastBuildDate>
 
-  </channel>
+  <item>
+  <title>東京藝妓文化大揭秘！體驗傳統日本的祕密花街</title>
+  <link>https://www.famechos.me/news/東京藝妓文化大揭秘！體驗傳統日本的祕密花街/</link>
+  <description>東京藝妓文化大揭秘！體驗傳統日本的祕密花街</description>
+  <category>Others</category>
+  <pubDate>Thu, 10 Oct 2024 16:20:36 +0800</pubDate>
+</item></channel>
 </rss>
