@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 10 Oct 2024 16:17:29 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:20:36 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -88,5 +88,11 @@
   <description>K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴、BTS成員V白金認證、Infinite慶祝出道15週年</description>
   <category>K-Pop</category>
   <pubDate>Thu, 10 Oct 2024 16:17:29 +0800</pubDate>
+</item><item>
+  <title>東京藝妓文化大揭秘！體驗傳統日本的祕密花街</title>
+  <link>https://www.famechos.me/news/東京藝妓文化大揭秘！體驗傳統日本的祕密花街/</link>
+  <description>東京藝妓文化大揭秘！體驗傳統日本的祕密花街</description>
+  <category>Others</category>
+  <pubDate>Thu, 10 Oct 2024 16:20:36 +0800</pubDate>
 </item></channel>
 </rss>
