@@ -47,3 +47,4 @@ https://www.koreaherald.com/view.php?ud=20241007050599
 https://www.koreaherald.com/view.php?ud=20241006050139
 https://tokyocheapo.com/editorial/halloween-2024-new-rules-shibuya-shinjuku/
 https://www.koreaherald.com/view.php?ud=20241008050463
+https://www.koreaherald.com/view.php?ud=20241010050640
